--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"server": "nodemon server.js",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false nom install --prefix client && npm run build --prefix client"
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"author": "Andrew Brown",
 	"license": "MIT",
